@@ -18,3 +18,4 @@ trust = rpmdb,file
 integrity = none
 syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype,trust
 rpm_sha256_only = 0
+allow_filesystem_mark = 0
